--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,23 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      
+    - name: Ensure package.json exists
+      run: |
+        if [ ! -f package.json ]; then
+          echo "❌ package.json not found"
+          exit 1
+        fi
+        
+    - name: Zip files for upload
+      run: |
+        zip -r project-files.zip . -x "node_modules/*"
 
-    # Optional: Lint or test here
-    # - name: Run lint/test
-    #   run: npm run test
+    - name: Upload zipped project
+      uses: actions/upload-artifact@v4
+      with:
+        name: project-files
+        path: project-files.zip
 
     - name: Upload build artifacts (optional frontend dist)
       if: success()
@@ -32,3 +45,8 @@ jobs:
         path: |
           .
           !node_modules/
+
+    - name: Debug PWD and LS
+      run: |
+        pwd
+        ls -la
