--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "bluestock",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Bluestock Fintech IPO Management System",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Skipping tests for now\" && exit 0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["IPO", "Node.js", "Express", "MongoDB", "Fintech"],
+  "author": "Prajeeta",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.15.1"
   },
-  "description": ""
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
