--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "react-scripts build"
     "test": "echo \"Skipping tests for now\" && exit 0"
   },
   "keywords": ["IPO", "Node.js", "Express", "MongoDB", "Fintech"],
