--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
     "test": "echo \"Skipping tests for now\" && exit 0"
   },
   "keywords": ["IPO", "Node.js", "Express", "MongoDB", "Fintech"],
@@ -15,7 +15,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
