--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,18 @@
-name: Build and Deploy to GitHub Pages
+name: Bluestock Node.js CI
 
 on:
   push:
-    branches: [main]  # deploy only on push to main
-
-permissions:
-  contents: write  # needed to push to gh-pages
+    branches: [main]  # Trigger CI on pushes to main
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
@@ -23,12 +20,10 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build the app
-        run: npm run build
+      - name: Run test script
+        run: npm test
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build  # or ./dist depending on your framework
-
+      - name: Display project structure (debug)
+        run: |
+          echo "✅ Directory structure:"
+          ls -la
