--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mongoose": "^8.15.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "mongoose": "^8.15.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
